Add Google external authentication support
Introduced Google authentication by adding IExternalAuthServices interface, its implementation, and ExternalAuthController. Registered the new service, configured Google authentication in Program.cs, updated appsettings.json with Google credentials, and added necessary NuGet packages.

--- a/tariqi/appsettings.json
+++ b/tariqi/appsettings.json
@@ -3,6 +3,13 @@
     "DefaultConnection": "Server=.;Database=Tariqi;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
 
   },
+  "Authentication": {
+    "Google": {
+      "ClientId": "619202360107-v889c11s5vmb92kls5128as4v3guaukn.apps.googleusercontent.com",
+      "ClientSecret": "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"
+
+    }
+  },
   "Jwt": {
     "Issuer": "https://localhost:7192/",
     "Audience": "https://localhost:7192/",
